[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "options-pricer"
version = "0.1.0"
description = "Extensible quant library for options pricing"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.1.1"
]

[tool.hatch.build.targets.wheel]
packages = ["options_pricer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["options_pricer"]
